--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vitthaljewellerspvtltd@gmail.com
-spring.mail.password=kvhewetrefdhlfmv
+spring.mail.password=
 
 
 
